--- a/django/myvenv/Scripts/form/templates/form/submit_form.html
+++ b/django/myvenv/Scripts/form/templates/form/submit_form.html
@@ -3,6 +3,8 @@
 <!-- Latest compiled and minified CSS -->
 
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Indie+Flower|Love+Ya+Like+A+Sister" rel="stylesheet">
     <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
@@ -19,7 +21,7 @@
   <p> A iniciativa do programa e' apoiar mulheres na area de tecnologia
   que inspiram sua comunidade e outras meninas a cogitarem o curso superior na area
 de tecnologia </p>
-
-  <button> Inscrever  </button>
+  <center>
+  <button class="w3-xlarge w3-button w3-round-xxlarge w3-blue w3-hover-white w3-border w3-hover-tex-black"> Inscrever  </button> </center>
 
  </html>
