--- a/django/myvenv/Scripts/form/templates/form/base.html
+++ b/django/myvenv/Scripts/form/templates/form/base.html
@@ -1,7 +1,6 @@
 {% load staticfiles %}
-<html>
-<!-- Latest compiled and minified CSS -->
 
+<html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -10,18 +9,19 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="{% static 'css/form.css' %}">
+    <body>
+      <div id ="binary" >
+        <img src="{% static 'images/binary.jpg' %}" alt="Women in Computing">
+      </div>
 
-    <title>Apoio para Mulheres na Computeção</title>
-  </head>
-  <div id ="binary" >
-    <img src="{% static 'images/binary.jpg' %}" alt="Women in Computing">
-  </div>
-  <h1> Mulheres Na Computacao </h1>
-
-  <p> A iniciativa do programa e' apoiar mulheres na area de tecnologia
-  que inspiram sua comunidade e outras meninas a cogitarem o curso superior na area
-de tecnologia </p>
-  <center>
-  <button class="w3-xlarge w3-button w3-round-xxlarge w3-blue w3-hover-white w3-border w3-hover-tex-black"> Inscrever </button> </center>
-
- </html>
+      <h1> Mulheres Na Computacao </h1>
+      <div class="content container">
+              <div class="row">
+                  <div class="col-md-8">
+                      {% block content %}
+                      {% endblock %}
+                  </div>
+              </div>
+          </div>
+    </body>
+</html>
