all links working

--- a/django/myvenv/Scripts/form/templates/form/submit_form.html
+++ b/django/myvenv/Scripts/form/templates/form/submit_form.html
@@ -22,6 +22,6 @@
   que inspiram sua comunidade e outras meninas a cogitarem o curso superior na area
 de tecnologia </p>
   <center>
-  <button class="w3-xlarge w3-button w3-round-xxlarge w3-blue w3-hover-white w3-border w3-hover-tex-black"> Inscrever </button> </center>
+  <a href="submit/"> <button class="w3-xlarge w3-button w3-round-xxlarge w3-blue w3-hover-white w3-border w3-hover-tex-black"> Inscrever</button> </a> </center>
 
  </html>
