--- a/django/myvenv/Scripts/form/templates/form/submit_form.html
+++ b/django/myvenv/Scripts/form/templates/form/submit_form.html
@@ -11,12 +11,12 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="{% static 'css/form.css' %}">
 
-    <title>Apoio para Mulheres na Computeção</title>
+    <title>Hackeadoras</title>
   </head>
   <div id ="binary" >
     <img src="{% static 'images/binary.jpg' %}" alt="Women in Computing">
   </div>
-  <h1> Mulheres Na Computacao </h1>
+  <h1> Hackeadoras  </h1>
 
   <p> A iniciativa do programa e' apoiar mulheres na area de tecnologia
   que inspiram sua comunidade e outras meninas a cogitarem o curso superior na area
